setup I18n on devise and main flow

--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full max-w-xs">
-    <h2 class="font-hairline mb-6 text-center">Change Your Password</h2>
+    <h2 class="font-hairline mb-6 text-center">t('change_password')</h2>
 
     <%= form_for(resource,
                  as: resource_name,
