--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full max-w-xs">
-    <h1 class="font-hairline mb-6 text-center">Forgot your password?</h1>
+    <h1 class="font-hairline mb-6 text-center">t('forgot_your_password')</h1>
 
     <%= form_for(resource,
                  as: resource_name,
