--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full max-w-xs">
-  <h1 class="font-hairline mb-6 text-center">Edit <%= resource_name.to_s.humanize %></h1>
+  <h1 class="font-hairline mb-6 text-center"><%= t('edit') %> <%= resource_name.to_s.humanize %></h1>
 
   <%= form_for(resource,
                  as: resource_name,
@@ -26,7 +26,7 @@
   <% end %>
 
   <div class="mb-4">
-    <%= f.label :password, class: "block font-bold mb-2 text-gray-700 text-sm" %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password, class: "block font-bold mb-2 text-gray-700 text-sm" %> <i><%= t('leave_blank_or_change_it') %></i><br />
     <%= f.password_field :password, autocomplete: "new-password", class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" %>
 
   </div>
@@ -53,7 +53,7 @@
   </div>
   <% end %>
 
-  <p>Unhappy? <span><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></span></p>
+  <p>t('unhappy') <span><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: t('are_you_sure') }, method: :delete %></span></p>
 
-  <%= link_to "Back", :back %>
+  <%= link_to t('back'), :back %>
 </div>
