--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,37 +1,37 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name),
+  <%= link_to t('login'), new_session_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %><br/>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot Password?", new_user_password_path(resource_name),
+  <%= link_to t('forgot_password'), new_user_password_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %> <br/>
 <% end %>
 
  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name),
+    <%= link_to t('sign_up'), new_registration_path(resource_name),
                 class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
     %><br />
 <% end %>
 
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "Didn't receive confirmation info?", new_user_confirmation_path(resource_name),
+  <%= link_to t('didn_receive_confirmation'), new_user_confirmation_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %><br />
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock info?", new_user_unlock_path(resource_name),
+  <%= link_to  t('didn_receive_unlock_info'), new_user_unlock_path(resource_name),
               class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
   %><br />
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider),
+    <%= link_to "#{t('sign_in_with')} #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider),
                 class: "inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
     %><br />
   <% end %>
