--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -23,7 +23,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @providers.each do |provider| %>
+        <% @collection.each do |provider| %>
           <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
             <td class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white"><%= provider.name %></td>
             <td class="py-4 px-6"><%= render "actions", provider: provider %></td><td></td>
@@ -32,7 +32,7 @@
       </tbody>
       <tfoot>
         <tr>
-          <td> <%= will_paginate @provider, list_classes: %w(pagination justify-content-end) %> </td>
+          <td> <%= will_paginate @collection, list_classes: %w(pagination justify-content-end) %> </td>
         </tr>
       </tfoot>
     </table>
