--- a/app/views/providers/edit.html.erb
+++ b/app/views/providers/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing provider</h1>
+  <h1 class="font-bold text-4xl"><%= t('edit_provider') %></h1>
 
   <%= render "form", provider: @provider %>
 
-  <%= link_to "Show this provider", @provider, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to providers", providers_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to t('show_this_provider'), @provider, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to t('back_to_providers'), providers_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
