--- a/app/views/banks/_form.html.erb
+++ b/app/views/banks/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="my-5">
     <%= form.label :name, t('name').capitalize %>
-    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", maxlength: 15 %>
   </div>
 
   <div class="inline">
