--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -2,7 +2,6 @@
   <% if @subject.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(@subject.errors.count, "error") %> prohibited this provider from being saved:</h2>
-
       <ul>
         <% @subject.errors.full_messages.each do |error| %>
           <li><%= error %></li>
@@ -18,7 +17,7 @@
 
   <div class="my-5">
     <%= form.label :nit %>
-    <%= form.text_field :nit, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :nit, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full",  maxlength: 12 %>
   </div>
 
   <div class="my-5">
@@ -28,17 +27,20 @@
 
   <div class="my-5">
     <%= form.label :cell_phone %>
-    <%= form.text_field :cell_phone, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :cell_phone, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", maxlength: 10 %>
   </div>
 
   <div class="my-5">
     <%= form.label :bank_id %>
-    <%= form.number_field :bank_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+ 
+    <%@array = ['Football', 'Basketball', 'Golf Soccer']%>
+
+    <%= form.select "bank_id", options_from_collection_for_select(current_user.banks, "id", "name")  %>
   </div>
 
   <div class="my-5">
     <%= form.label :account %>
-    <%= form.text_field :account, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.text_field :account, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full", maxlength: 15 %>
   </div>
 
   <div class="inline">
